Troubleshooting layout Issues.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -268,6 +268,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -687,8 +688,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -704,7 +706,7 @@ a {
 }
 
 .block-plans .grid {
-  gap: 8rem rem;
+  gap: 8rem 4rem;
 }
 
 .block-plans .card {
@@ -836,4 +838,8 @@ a {
   .footer__heading {
     font-size: 1.6rem;
   }
+}
+/* Sign-up Callout */
+.callout-signup {
+  transform: translateY(5rem);
 }
